--- a/Style.css
+++ b/Style.css
@@ -14,6 +14,10 @@ html body{
     margin: 0 auto;
 
 }
+.container-2{
+    width: 70%;
+    margin: 0 auto;
+}
 /* Header & Navbar */
 /* nav */
 .Flex{
@@ -86,5 +90,316 @@ nav ul{
     border-radius: 30px;
     margin-top: 15px;
 }
+/* logo line */
+.main-1{
+    height: 30vh;
+    background-color: #FFFFFF;
+}
+.logo-line{
+    
+    
+}
+.logo-line ul{
+    list-style: none;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    padding: 25px 50px;
+    
+    
+}
+/* main-2 */
 
+/* title */
+.title{
+    justify-content: center;
+    display: flex;
+}
+.title h3{
+    color: #28241F;
+     font-size: 20px;
+}
+.box-1{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 40px;
+}
+/* box-1 */
+.bgd-1{
+    height: 380px;
+    width: 33%;
+    background-color: #FFFFFF;
+    border: solid 0.5px;
+    border-color: #8E8F96;
+    border-radius: 10px;
+    
+}
+.im1 img{
+    width: 235px;
+    height: 230px;
+    padding: 15px 15px;
+    
+}
+.bgd-1 .rating-1{
+    margin-left: 15px;
+}
+.bgd-1 .rating-1 h4{
+    margin-top: 15px ;
+}
+.peragraph1{
+    font-size: 13px;
+    margin-top: 10px;
+    color: #8E8F96;
+}
+/* box-2 */
+.bgd-2{
+    height: 380px;
+    width: 33%;
+    background-color: #FFFFFF;
+    border: solid 0.5px;
+    border-color: #8E8F96;
+    border-radius: 10px;
+    
+}
+.im2 img{
+    width: 235px;
+    height: 230px;
+    padding: 15px 15px;
+    
+}
+.bgd-2 .rating-2{
+    margin-left: 15px;
+}
+.bgd-2 .rating-2 h4{
+    margin-top: 15px ;
+}
+.peragraph2{
+    font-size: 13px;
+    margin-top: 10px;
+    color: #8E8F96;
+}
+/* box-3 */
+.bgd-3{
+    height: 380px;
+    width: 33%;
+    background-color: #FFFFFF;
+    border: solid 0.5px;
+    border-color: #8E8F96;
+    border-radius: 10px;
+    
+}
+.im3 img{
+    width: 235px;
+    height: 230px;
+    padding: 15px 15px;
+    
+}
+.bgd-3 .rating-3{
+    margin-left: 15px;
+}
+.bgd-3 .rating-3 h4{
+    margin-top: 15px ;
+}
+.peragraph3{
+    font-size: 13px;
+    margin-top: 10px;
+    color: #8E8F96;
 
+}
+/* B-box-2 */
+.box-2{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 40px;
+}
+/* box-4 */
+.bgd-4{
+    height: 380px;
+    width: 33%;
+    background-color: #FFFFFF;
+    border: solid 0.5px;
+    border-color: #8E8F96;
+    border-radius: 10px;
+    
+}
+.im4 img{
+    width: 235px;
+    height: 230px;
+    padding: 15px 15px;
+    
+}
+.bgd-4 .rating-4{
+    margin-left: 15px;
+}
+.bgd-4 .rating-4 h4{
+    margin-top: 15px ;
+}
+.peragraph4{
+    font-size: 13px;
+    margin-top: 10px;
+    color: #8E8F96;
+
+}
+/* box-5 */
+.bgd-5{
+    height: 380px;
+    width: 33%;
+    background-color: #FFFFFF;
+    border: solid 0.5px;
+    border-color: #8E8F96;
+    border-radius: 10px;
+    
+}
+.im5 img{
+    width: 235px;
+    height: 230px;
+    padding: 15px 15px;
+    
+}
+.bgd-5 .rating-5{
+    margin-left: 15px;
+}
+.bgd-5 .rating-5 h4{
+    margin-top: 15px ;
+}
+.peragraph5{
+    font-size: 13px;
+    margin-top: 10px;
+    color: #8E8F96;
+
+}
+/* box-6 */
+.bgd-6{
+    height: 380px;
+    width: 33%;
+    background-color: #FFFFFF;
+    border: solid 0.5px;
+    border-color: #8E8F96;
+    border-radius: 10px;
+    
+}
+.im6 img{
+    width: 235px;
+    height: 230px;
+    padding: 15px 15px;
+    
+}
+.bgd-6 .rating-6{
+    margin-left: 15px;
+}
+.bgd-6 .rating-6 h4{
+    margin-top: 15px ;
+}
+.peragraph6{
+    font-size: 13px;
+    margin-top: 10px;
+    color: #8E8F96;
+
+}
+/* B-box-3 */
+.box-3{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 40px;
+}
+/* box-7 */
+.bgd-7{
+    height: 380px;
+    width: 33%;
+    background-color: #FFFFFF;
+    border: solid 0.5px;
+    border-color: #8E8F96;
+    border-radius: 10px;
+    
+}
+.im7 img{
+    width: 235px;
+    height: 230px;
+    padding: 15px 15px;
+    
+}
+.bgd-7 .rating-7{
+    margin-left: 15px;
+}
+.bgd-7 .rating-7 h4{
+    margin-top: 15px ;
+}
+.peragraph7{
+    font-size: 13px;
+    margin-top: 10px;
+    color: #8E8F96;
+
+}
+/* box-8 */
+.bgd-8{
+    height: 380px;
+    width: 33%;
+    background-color: #FFFFFF;
+    border: solid 0.5px;
+    border-color: #8E8F96;
+    border-radius: 10px;
+    
+}
+.im8 img{
+    width: 235px;
+    height: 230px;
+    padding: 15px 15px;
+    
+}
+.bgd-8 .rating-8{
+    margin-left: 15px;
+}
+.bgd-8 .rating-8 h4{
+    margin-top: 15px ;
+}
+.peragraph8{
+    font-size: 13px;
+    margin-top: 10px;
+    color: #8E8F96;
+
+}
+/* box-9 */
+.bgd-9{
+    height: 380px;
+    width: 33%;
+    background-color: #FFFFFF;
+    border: solid 0.5px;
+    border-color: #8E8F96;
+    border-radius: 10px;
+    
+}
+.im9 img{
+    width: 235px;
+    height: 230px;
+    padding: 15px 15px;
+    
+}
+.bgd-9 .rating-9{
+    margin-left: 15px;
+}
+.bgd-9 .rating-9 h4{
+    margin-top: 15px ;
+}
+.peragraph9{
+    font-size: 13px;
+    margin-top: 10px;
+    color: #8E8F96;
+
+}
+/* Button */
+.main-2 button{
+    margin-top: 40px;
+    border: none;
+    padding: 10px 15px;
+    color: #E14972;
+    font-size: 13px;
+    font-weight: 600;
+    background-color: #FFFFFF;
+    margin-right: 105px;
+    cursor: pointer;
+    float:right
+    
+}
