--- a/Style.css
+++ b/Style.css
@@ -9,10 +9,19 @@ html body{
     width: 100%;
     height: 100%;
 }
+/* Containers */
 .container{
-    width: 85%;
+    width: 100%;
     margin: 0 auto;
-
+    height: 15vh;
+}
+.header-bottom .container{
+    width: 95%;
+}
+.main-3 .container{
+    width: 100%;
+    margin: 0 auto;
+    height: 55vh;
 }
 .container-2{
     width: 70%;
@@ -25,90 +34,71 @@ html body{
 }
 nav{
     justify-content: space-between;
-    padding: 60px 20px;
+    padding: 20px 20px 30px 20px;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(255,0,29,1) 84%); 
+    z-index: 100;
+}
+
+/* Uppernav */
+.uppernav ul{
+    display: flex;
+    align-items: center;
+    margin-left: 855px;
+    gap: 7px;
+    color: white;
+}
+/* Lowernav */
+.lowernav{
+    gap: 15px;
 }
 nav .logo{
-    font-size: 20px;
-    color: rgb(5, 5, 46);
+    font-size: 25px;
+    color: white;
+}
+/* Nav searchbar */
+.searchbar{
+    display: flex;
+}
+.searchbar input{
+    border: none;
+    outline: none;
+    border-radius: 10px 0 0 10px;
+
+    /* background-color: white; */
+    cursor: pointer;
+    background-color:rgb(72, 152, 233) ;
+    font-size: 15px;
+    padding: 0px 15px;
+    color: rgb(5, 5, 34)  
+    
+}
+.searchbar button{
+    border: none;
+    border-radius: 0 10px 10px 0;
+    font-size: 15px;
+    padding: 10px 10px;
+    background-color:rgb(72, 152, 233) ;
+    cursor: pointer;
 }
 nav ul{
     list-style: none;
-    gap: 30px;
-    font-size: 15px;
+    gap: 20px;
+    text-transform: uppercase;
+    font-size: 13px;
     font-weight: 450;
+    align-items: center;
 }
 /* Header */
-.header-bottom{
-    height: 80vh;
-    background-color: #FFFFFF;
-}
 .warp{
-    justify-content: space-between;
-    align-content:center;
-    gap: 30px;
-}
-
-.right-main{
-    width: 50%;
-    display: flex;
-}
-.right-main img{
-    width: 380px;
-    height: 380px;
-}
-.right-main .bg{
-    height: 400px;
-    width: 400px;
-    background-image: url(./images/Circle\ design.svg);
+    height: 0px;
+    width: 0px;
+    background-image: url(./);
     background-repeat: no-repeat;
     background-size: cover;
-    justify-content: center;
-    align-items: center;
-    display: flex;
+}
 
-}
-.left-main{
-    width: 50%;
-    align-self: center;
-}
-.left-main h1{
-    color: #3A3A3A;
-
-}
-.left-main p{
-    color: #383A3B;
-    margin-top: 15px;
-    font-size: 14px;
-    font-weight: 500;
-}
-.left-main button{
-    border: none;
-    background-color: #E2306E;
-    font-size: 15px;
-    color: white;
-    padding: 12px 22px;
-    border-radius: 30px;
-    margin-top: 15px;
-}
-/* logo line */
-.main-1{
-    height: 30vh;
-    background-color: #FFFFFF;
-}
-.logo-line{
-    
-    
-}
-.logo-line ul{
-    list-style: none;
-    gap: 20px;
-    align-items: center;
-    justify-content: center;
-    padding: 25px 50px;
-    
-    
-}
 /* main-2 */
+
 
 /* title */
 .title{
