--- a/Style1x.css
+++ b/Style1x.css
@@ -92,7 +92,7 @@ nav ul{
 .warp{
     height: 0px;
     width: 0px;
-    background-image: url(./);
+    background-image:ur
     background-repeat: no-repeat;
     background-size: cover;
 }
