--- a/Style1x.css
+++ b/Style1x.css
@@ -16,7 +16,7 @@ html body{
     height: 15vh;
 }
 .header-bottom .container{
-    width: 95%;
+    width: 100%;
 }
 .main-3 .container{
     width: 100%;
@@ -24,7 +24,7 @@ html body{
     height: 55vh;
 }
 .container-2{
-    width: 70%;
+    width: 95%;
     margin: 0 auto;
 }
 /* Header & Navbar */
@@ -37,6 +37,28 @@ nav{
     padding: 20px 20px 30px 20px;
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(255,0,29,1) 84%); 
     z-index: 100;
+}
+/* Nav hover */
+nav .hov li{
+    position: relative;
+    text-decoration: none;
+    cursor: pointer;
+}
+.hov li::after{
+    content: "";
+    position:absolute;
+    background-color:rgb(20, 4, 77);
+    height: 3px;
+    width: 0;
+    left: 0;
+    bottom: -10px;
+    transition: 0.3s;
+}
+.hov li:hover{
+    color: #37EDF3;
+}
+.hov li:hover::after{
+    width: 100%;
 }
 
 /* Uppernav */
@@ -89,10 +111,25 @@ nav ul{
     align-items: center;
 }
 /* Header */
-.header-bottom .warp{
-    height: 500px;
-    width: 500px;
-    background-image: url(./Images/cover\ pic-1.avif);
+.header-bottom{
+    height: 72vh;
+    margin-top: 8px;
+    
+}
+.header-bottom .wrap{
+    height: 470px;
+    width: 1080px;
+    background-image: url(./Images/cover\ pic-4.avif);
+    background-size: cover;
+    background-repeat: no-repeat;
+    justify-content: center;
+    align-items: center;
+}
+.header-bottom .wrap h1{
+    font-size: 40px;
+    background:linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(255,0,29,1) 84%);
+    background-clip: text;
+    color: transparent;
 }
 
 /* main-2 */
@@ -104,24 +141,28 @@ nav ul{
     display: flex;
 }
 .title h3{
-    color: #28241F;
-     font-size: 20px;
+    color: #ec0c31;
+     font-size: 25px;
 }
 .box-1{
     display: flex;
     justify-content: space-between;
-    gap: 20px;
+    gap: 10px;
     margin-top: 40px;
+}
+.main-2{
+    background-color: #e7e7ee;
+    padding-top: 30px;
 }
 /* box-1 */
 .bgd-1{
     height: 380px;
-    width: 33%;
-    background-color: #FFFFFF;
+    width: 25%;
+    background:linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(255,0,29,1) 84%);
     border: solid 0.5px;
     border-color: #8E8F96;
     border-radius: 10px;
-    
+    cursor: pointer;
 }
 .im1 img{
     width: 235px;
@@ -132,8 +173,12 @@ nav ul{
 .bgd-1 .rating-1{
     margin-left: 15px;
 }
+.bgd-1 .rating-1 h3{
+    color: #857777;
+}
 .bgd-1 .rating-1 h4{
     margin-top: 15px ;
+    color:#8E8F96 ;
 }
 .peragraph1{
     font-size: 13px;
@@ -143,12 +188,12 @@ nav ul{
 /* box-2 */
 .bgd-2{
     height: 380px;
-    width: 33%;
-    background-color: #FFFFFF;
+    width: 25%;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(255,0,29,1) 84%);
     border: solid 0.5px;
     border-color: #8E8F96;
     border-radius: 10px;
-    
+    cursor: pointer;
 }
 .im2 img{
     width: 235px;
@@ -159,8 +204,12 @@ nav ul{
 .bgd-2 .rating-2{
     margin-left: 15px;
 }
+.bgd-2 .rating-2 h3{
+    color: #857777;
+}
 .bgd-2 .rating-2 h4{
     margin-top: 15px ;
+    color:#8E8F96 ;
 }
 .peragraph2{
     font-size: 13px;
@@ -170,11 +219,12 @@ nav ul{
 /* box-3 */
 .bgd-3{
     height: 380px;
-    width: 33%;
-    background-color: #FFFFFF;
+    width: 25%;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(255,0,29,1) 84%);
     border: solid 0.5px;
     border-color: #8E8F96;
     border-radius: 10px;
+    cursor: pointer;
     
 }
 .im3 img{
@@ -186,8 +236,12 @@ nav ul{
 .bgd-3 .rating-3{
     margin-left: 15px;
 }
+.bgd-3 .rating-3 h3{
+    color: #857777;
+}
 .bgd-3 .rating-3 h4{
     margin-top: 15px ;
+    color:#8E8F96 ;
 }
 .peragraph3{
     font-size: 13px;
@@ -195,21 +249,16 @@ nav ul{
     color: #8E8F96;
 
 }
-/* B-box-2 */
-.box-2{
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    margin-top: 40px;
-}
+
 /* box-4 */
 .bgd-4{
     height: 380px;
-    width: 33%;
-    background-color: #FFFFFF;
+    width: 25%;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(255,0,29,1) 84%);
     border: solid 0.5px;
     border-color: #8E8F96;
     border-radius: 10px;
+    cursor: pointer;
     
 }
 .im4 img{
@@ -221,8 +270,12 @@ nav ul{
 .bgd-4 .rating-4{
     margin-left: 15px;
 }
+.bgd-4 .rating-4 h3{
+    color: #857777;
+}
 .bgd-4 .rating-4 h4{
     margin-top: 15px ;
+    color: #8E8F96;
 }
 .peragraph4{
     font-size: 13px;
@@ -230,14 +283,23 @@ nav ul{
     color: #8E8F96;
 
 }
+/* B-box-2 */
+.box-2{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    margin-top: 40px;
+}
+
 /* box-5 */
 .bgd-5{
     height: 380px;
-    width: 33%;
-    background-color: #FFFFFF;
+    width: 25%;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(255,0,29,1) 84%);
     border: solid 0.5px;
     border-color: #8E8F96;
     border-radius: 10px;
+    cursor: pointer;
     
 }
 .im5 img{
@@ -249,8 +311,12 @@ nav ul{
 .bgd-5 .rating-5{
     margin-left: 15px;
 }
+.bgd-5 .rating-5 h3{
+    color: #857777;
+}
 .bgd-5 .rating-5 h4{
     margin-top: 15px ;
+    color: #8E8F96;
 }
 .peragraph5{
     font-size: 13px;
@@ -261,11 +327,12 @@ nav ul{
 /* box-6 */
 .bgd-6{
     height: 380px;
-    width: 33%;
-    background-color: #FFFFFF;
+    width: 25%;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(255,0,29,1) 84%);
     border: solid 0.5px;
     border-color: #8E8F96;
     border-radius: 10px;
+    cursor: pointer;
     
 }
 .im6 img{
@@ -277,30 +344,28 @@ nav ul{
 .bgd-6 .rating-6{
     margin-left: 15px;
 }
+.bgd-6 .rating-6 h3{
+    color: #857777;
+}
 .bgd-6 .rating-6 h4{
     margin-top: 15px ;
+    color: #8E8F96;
 }
 .peragraph6{
     font-size: 13px;
     margin-top: 10px;
     color: #8E8F96;
+}
 
-}
-/* B-box-3 */
-.box-3{
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    margin-top: 40px;
-}
 /* box-7 */
 .bgd-7{
     height: 380px;
-    width: 33%;
-    background-color: #FFFFFF;
+    width: 25%;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(255,0,29,1) 84%);
     border: solid 0.5px;
     border-color: #8E8F96;
     border-radius: 10px;
+    cursor: pointer;
     
 }
 .im7 img{
@@ -312,8 +377,12 @@ nav ul{
 .bgd-7 .rating-7{
     margin-left: 15px;
 }
+.bgd-7 .rating-7 h3{
+    color: #857777;
+}
 .bgd-7 .rating-7 h4{
     margin-top: 15px ;
+    color: #8E8F96;
 }
 .peragraph7{
     font-size: 13px;
@@ -324,11 +393,12 @@ nav ul{
 /* box-8 */
 .bgd-8{
     height: 380px;
-    width: 33%;
-    background-color: #FFFFFF;
+    width: 25%;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(255,0,29,1) 84%);
     border: solid 0.5px;
     border-color: #8E8F96;
     border-radius: 10px;
+    cursor: pointer;
     
 }
 .im8 img{
@@ -340,8 +410,13 @@ nav ul{
 .bgd-8 .rating-8{
     margin-left: 15px;
 }
+.bgd-8 .rating-8 h3{
+    color: #857777;
+}
 .bgd-8 .rating-8 h4{
     margin-top: 15px ;
+    color: #8E8F96;
+
 }
 .peragraph8{
     font-size: 13px;
@@ -349,14 +424,24 @@ nav ul{
     color: #8E8F96;
 
 }
+/* B-box-3 */
+.box-3{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    margin-top: 40px;
+}
+
+
 /* box-9 */
 .bgd-9{
     height: 380px;
-    width: 33%;
-    background-color: #FFFFFF;
+    width: 25%;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(255,0,29,1) 84%);
     border: solid 0.5px;
     border-color: #8E8F96;
     border-radius: 10px;
+    cursor: pointer;
     
 }
 .im9 img{
@@ -368,8 +453,12 @@ nav ul{
 .bgd-9 .rating-9{
     margin-left: 15px;
 }
+.bgd-9 .rating-9 h3{
+    color: #857777;
+}
 .bgd-9 .rating-9 h4{
     margin-top: 15px ;
+    color: #8E8F96;
 }
 .peragraph9{
     font-size: 13px;
@@ -377,16 +466,116 @@ nav ul{
     color: #8E8F96;
 
 }
+
+/* box-10 */
+.bgd-10{
+    height: 380px;
+    width: 25%;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(255,0,29,1) 84%);
+    border: solid 0.5px;
+    border-color: #8E8F96;
+    border-radius: 10px;
+    cursor: pointer;
+    
+}
+.im10 img{
+    width: 235px;
+    height: 230px;
+    padding: 15px 15px;
+    
+}
+.bgd-10 .rating-10{
+    margin-left: 15px;
+}
+.bgd-10 .rating-10 h3{
+    color: #857777;
+}
+.bgd-10 .rating-10 h4{
+    margin-top: 15px ;
+    color: #8E8F96;
+}
+.peragraph10{
+    font-size: 13px;
+    margin-top: 10px;
+    color: #8E8F96;
+
+}
+/* box-11 */
+.bgd-11{
+    height: 380px;
+    width: 25%;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(255,0,29,1) 84%);
+    border: solid 0.5px;
+    border-color: #8E8F96;
+    border-radius: 10px;
+    cursor: pointer;
+    
+}
+.im11 img{
+    width: 235px;
+    height: 230px;
+    padding: 15px 15px;
+    
+}
+.bgd-11 .rating-11{
+    margin-left: 15px;
+}
+.bgd-11 .rating-11 h3{
+    color: #857777;
+}
+.bgd-11 .rating-11 h4{
+    margin-top: 15px ;
+    color: #8E8F96;
+}
+.peragraph11{
+    font-size: 13px;
+    margin-top: 10px;
+    color: #8E8F96;
+
+}
+/* box-12 */
+.bgd-12{
+    height: 380px;
+    width: 25%;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(255,0,29,1) 84%);
+    border: solid 0.5px;
+    border-color: #8E8F96;
+    border-radius: 10px;
+    cursor: pointer;
+    
+}
+.im12 img{
+    width: 235px;
+    height: 230px;
+    padding: 15px 15px;
+    
+}
+.bgd-12 .rating-12{
+    margin-left: 15px;
+}
+.bgd-12 .rating-12 h3{
+    color: #857777;
+}
+.bgd-12 .rating-12 h4{
+    margin-top: 15px ;
+    color: #8E8F96;
+}
+.peragraph12{
+    font-size: 13px;
+    margin-top: 10px;
+    color: #8E8F96;
+
+}
 /* Button */
 .main-2 button{
-    margin-top: 40px;
+    margin-top: 10px;
     border: none;
     padding: 10px 15px;
-    color: #E14972;
-    font-size: 13px;
+    color: #e14949;
+    font-size: 15px;
     font-weight: 600;
     background-color: #FFFFFF;
-    margin-right: 105px;
+    margin-right: 30px;
     cursor: pointer;
     float:right
     
@@ -427,7 +616,7 @@ nav ul{
 }
 .Join .im2 button{
     border:none;
-    background-color: #E22E6D;
+    background-color: #03012E;
     color: white;
     font-size: 13px;
     padding: 15px 30px;
@@ -435,51 +624,27 @@ nav ul{
     font-weight: 900;
     cursor: pointer;
 }
-/* Search */
-.search .bg{
-    background-color: #E14972;
-    height: 400px;
-    width: 100%;
-    background-image: url(./images/1600.htm);
-    background-size: cover;
-    background-repeat: no-repeat;
-    align-content: center;
-    
+/* Map Location */
+.main-4{
+    height: 65vh;
+    padding: 10px;
+    margin-bottom: 10px;
 }
-.search .tp{
+.wrap-3{
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    align-items: center;
     gap: 20px;
+    background: linear-gradient(90deg, rgba(9,5,98,0.709051724137931) 21%, rgba(242,0,0,0.7306034482758621) 100%);
 }
-.search .bg h1{
-    justify-content: center;
-    display: flex;
-    font-size: 40px;
-    color: white;
-}
-.search .tp input{
-    border: none;
-    padding: 15px 20px;
-    font-size: 18px;
-    width: 50%;
-    border-radius: 10px;
-    background-color: #37d7e6;
-}
-.search .tp button{
-    border:none;
-    background-color: #E22E6D;
-    color: white;
-    font-size: 15px;
-    padding: 15px 25px;
-    font-weight: 900;
-    cursor: pointer;
-    border-radius: 10px;
+.wrap-3 h5{
+    font-size: 25px;
+
 }
 /* Footer */
 .footer{
     height: 30vh;
-    background-color: #000000;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(255,0,29,1) 84%);
     color: white;
     display: flex;
     justify-content: center;
@@ -502,4 +667,13 @@ nav ul{
 .footer .p2{
     margin-bottom: 10px;
     font-size: 12px;
+}
+.contact{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    gap: 100px;
+}
+.contact #con{
+    flex-direction: column;
 }
